--- a/index.html
+++ b/index.html
@@ -5,16 +5,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <script src="https://cdn.tailwindcss.com"></script>
     <style>
-        /* Pequeno ajuste para fonte e scroll de tabela */
         body { font-family: Inter, ui-sans-serif, system-ui, -apple-system, "Segoe UI", Roboto, "Helvetica Neue", Arial; }
-        .table-wrap { max-height: 340px; overflow:auto; }
       </style>
-    <title>Calculadora do cidadão</title>
+    <title>de_calc</title>
   </head>
-  <body>
     <body class="bg-gray-50 p-6">
         <div class="max-w-4xl mx-auto bg-white rounded-2xl shadow-lg p-6">
-          <h1 class="text-2xl font-semibold text-gray-800 mb-4">Calculadoras Financeiras</h1>
+          <h1 class="text-2xl font-semibold text-gray-800 mb-4">de_calc: Calculadoras Financeiras</h1>
       
           <div class="flex flex-wrap gap-3 mb-6" id="tabs">
             <button class="tab-btn px-4 py-2 rounded-lg text-sm font-medium tab-active" data-tab="fin">Financiamento com prestações fixas</button>
